fixed navigation and footer works through scrolling,issue on mobile display is no longer it is dead

--- a/umix.css
+++ b/umix.css
@@ -1,5 +1,7 @@
 .w_mainbar{
     background-color: rgba(30, 30, 167, 0.82);
+position : fixed;
+width:100%;
 }
 .w_jumbotron{
 margin-top: 50px;
@@ -29,7 +31,7 @@ background-color: white;
 padding: 4px;
 }
 .footer{
-    position: absolute;
+    position: fixed;
     bottom: 1px;
 text-align: center;
     font-size: 18px;
